src/styles/css/main.stylesheet.css
/* ... */
input[type='range'] {
    -webkit-appearance: none;
}

input[type='range']::-webkit-slider-runnable-track {
    height: 1px;
}

input[type='range']::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: 10px;
    height: 10px;
    background-color: white;
    border: 0;
    border-radius: 50%;
    cursor: pointer;
}

.draggable-panel-css .minimize {
    position: absolute;
    right: 15px;
    cursor: pointer;
}

.panel-button-icon {
    cursor: pointer;
}

.panel-button {
    cursor: pointer;
    padding: 2px;
}

.draggable-panel-css .maximize {
    position: absolute;
    right: 15px;
    cursor: pointer;
    display: none;
}

.ce-hidden,
.prop-hidden {
    font-weight: bold;
    padding: 10px;
    font-size: 16px;
    text-transform: uppercase;
    border-radius: 5px;
}

.largeButton.btn {
    width: 100%;
    margin-bottom: 5px;
    margin-left: 0 !important;
}

.objectPropertyAttributeChecked {
    margin-left: 0 !important;
}

#exitViewBtn {
    position: fixed;
    z-index: 1000000000;
    right: 2%;
    top: 3%;
    box-shadow: 0px 0px 10Xpx #4545457f;
    padding: 10px 15px;
    border-radius: 5px;
}

.panel-drag {
    cursor: move;
    opacity: 0.6;
    /* display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
  padding: 6px 0;
  width: 1px; */
}

.ce-hidden,
.prop-hidden {
    cursor: move;
}

#canvasArea,
#backgroundArea,
#simulationArea,
canvas {
    /* cursor: wait !important; */
}

/** Color them dialog styles starts here*/

.ui-dialog[aria-describedby='colorThemesDialog'] {
    min-width: 760px;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
}

.colorThemesDialog {
    height: 390px !important;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    overflow-y: auto;
    margin-top: 10px;
    border: 1px solid white !important;
}

.colorThemesDialog input {
    margin: 15px;
}

.colorThemesDialog label {
    margin-bottom: 0;
}

.theme {
    color: white;
    width: 202.5px;
    line-height: 30px;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
    margin: 15px;
    border-radius: 1.5px;
    transition: all 0.1s ease-out;
    position: relative;
    overflow-x: hidden;
    height: 154px;
}

.themeNameBox {
    display: block;
    width: 100%;
    cursor: pointer;
}

.themeSel {
    background: transparent;
    display: block;
    width: 100%;
    height: 100%;
    position: absolute;
}

/*! Color them dialog styles ends here*/

/*! Custom Color theme dialog styles starts here*/

.ui-dialog[aria-describedby='CustomColorThemesDialog'] {
    min-width: 760px;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
}

#CustomColorThemesDialog {
    height: 400px !important;
    background: none;
    overflow: auto;
}

#CustomColorThemesDialog label {
    color: var(--text-panel);
    width: 60%;
    height: 30px;
}

#CustomColorThemesDialog input {
    cursor: pointer;
    width: 30%;
    height: 30px;
}

/*! Custom Color theme dialog styles ends here*/

.code-window .CodeMirror {
    height: calc(100% - 78px);
    overflow: scroll;
}

.code-window-embed .CodeMirror {
    height: 100%;
    overflow: scroll;
}

.code-window-embed {
    position: absolute;
    top: 28px;
    height: 100%;
    width: 100%;
    overflow: scroll;
    z-index: 3;
    display: none;
}

.code-window {
    display: none;
}

#verilogOutput {
    font-size: 12px;
}

.embed-fullscreen-btn {
    border-radius: 3px;
    width: auto;
}

#plot {
    width: 800px;
}

.timing-diagram-toolbar {
    padding-left: 4px;
    padding: 2px;
    cursor: default;
}

.timing-diagram-toolbar input {
    width: 80px;
    background: transparent !important;
}

#timing-diagram-log {
    font-size: 12.5px;
    padding: 3px;
    margin-left: 5px;
    /* margin-bottom: 5px; */
    border-radius: 3px;
}

/* CustomColorInput Styles Starts Here */
.customColorInput{
    cursor: pointer;
    width: 30%;
    height: 30px;
    overflow: visible;
    position: relative;
    top: 8px;
    appearance: auto;
    background-color: buttonface;
    color: buttontext;
    border-width: 1px;
    border-style: solid;
    border-color: buttonborder;
    border-image: initial;
    padding: 1px 2px;
    
}
.customColorLabel{
    width: 60%;
    height: 30px;
}

/* Vue Dialog Box Styles STARTS */

.inputField {
    width: 100%;
    padding: 10px 10px;
    margin: 8px 0;
    box-sizing: border-box;
    border-radius: 5px;
    border: 1px solid #c5c5c5;
    color: white;
    outline: none;
}

.cAinput {
    width: 30%;
    padding: 0 5px;
    margin: 8px 0;
    box-sizing: border-box;
    border-radius: 5px;
    border: 1px solid #c5c5c5;
    color: white;
    outline: none;
}

.combinationalAnalysisInput:first-child {
    padding-top: 20px;
}

.combinationalAnalysisInput {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: baseline;
}

.inputField:focus {
    border: 2px solid #c5c5c5;
}

.v-card-actions {
    width: fit-content;
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: auto;
}

.messageBoxContent {
    height: auto;
    width: 760px;
    justify-content: center;
    margin: auto;
    backdrop-filter: blur(5px);
    border-radius: 5px;
    border: 0.5px solid var(--br-primary) !important;
    background: var(--bg-primary-moz) !important;
    background-color: var(--bg-primary-chr) !important;
    color: white;
}

/* media query for .messageBoxContent */
@media screen and (max-width: 991px) {
    .messageBoxContent{
        width: 100%;
    }
}

.tabsbarInput {
    align-items: center;
}

.messageBtn {
    width: fit-content;
    min-width: 50px;
    border: 1px solid #c5c5c5;
    padding: 5px 5px;
}

.messageBtn:hover {
    background: #c5c5c5;
    color: black;
}
/* ... */

